fix: make overflow-y auto

--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -53,7 +53,7 @@
     .body {
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
+        overflow-y: auto;
         overflow-x: hidden;
         flex: 1;
         line-height: normal;
